Webpages set up

--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Index Page</title>
+    <title>Contact Information</title>
   </head>
   <body>
-    <h1>Matthew Norbury</h1>
-    <a href="/cv.html">My CV</a>
+    <h1>How To Contact Me</h1>
   </body>
 </html>
