--- a/cv.html
+++ b/cv.html
@@ -3,10 +3,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Index Page</title>
+    <title>My CV</title>
   </head>
   <body>
     <h1>Matthew Norbury</h1>
-    <a href="/cv.html">My CV</a>
   </body>
 </html>
