HTML added and ready to be styled with CSS. Just a few more things I would like to add and tweak to the files.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <!--Matthew Norbury - 16404219-->
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>Index Page</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <h1>Matthew Norbury</h1>
-    <a href="/cv.html">My CV</a>
-  </body>
+    <a href="cv.html">My CV</a>
+    <a href="bio.html">About Me</a>
+    <a href="contact.html">Contact Me</a>
+    <img src="images/me.jpg" alt="https://scontent-lht6-1.xx.fbcdn.net/v/t1.0-9/14095840_1192501884104070_2799919203415757525_n.jpg?oh=bd83b864799ce2049b672d9a7ce3286e&oe=58B9BFD5">
+</body>
+
 </html>
