--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <!--Matthew Norbury - 16404219-->
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>Contact Information</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <h1>How To Contact Me</h1>
-  </body>
+    <h2>If you need to contact me for any reason don't hesitate to do so</h2>
+    <h3>Email</h3>
+    <a href="matty.norb@hotmail.co.uk">Email me here</a>
+    <h3>My number</h3>
+    <p>01234567891</p>
+    <h3>Social media</h3>
+    <a href="https://www.facebook.com/mattynorb"><img src="#" alt=""></a>
+    <a href="https://uk.linkedin.com/in/matthew-norbury-aa9718130"><img src="#" alt=""></a>
+    <a href="https://github.com/mattynorb"><img src="#" alt=""></a>
+</body>
+
 </html>
