Finished the HTML on 'index.html' and have done the CSS stylings for the index page.

--- a/index.html
+++ b/index.html
@@ -3,16 +3,39 @@
 <html>
 
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Oswald|Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="css/style-index.css" type="text/css">
     <meta charset="utf-8">
-    <title>Index Page</title>
+    <title>Home</title>
 </head>
 
 <body>
-    <h1>Matthew Norbury</h1>
-    <a href="cv.html">My CV</a>
-    <a href="bio.html">About Me</a>
-    <a href="contact.html">Contact Me</a>
-    <img src="images/me.jpg" alt="https://scontent-lht6-1.xx.fbcdn.net/v/t1.0-9/14095840_1192501884104070_2799919203415757525_n.jpg?oh=bd83b864799ce2049b672d9a7ce3286e&oe=58B9BFD5">
+
+    <img id="splash" src="images/watchmen-1613267.png" alt="">
+
+    <header class="header">
+        <h1>Matthew Norbury</h1>
+    </header>
+
+    <article class="left-column">
+        <p>This is my website! Here you can learn more about me as well as looking at my qualifications and social media links.</p>
+        <ul>
+            <li><a href="cv.html">My CV</a></li>
+            <li><a href="bio.html">About Me</a></li>
+            <li><a href="contact.html">Contact Me</a></li>
+        </ul>
+    </article>
+
+    <article class="right-column">
+        <img id="me" src="images/me.jpg" alt="images/me-alt.jpg">
+    </article>
+
+    <footer class="footer">
+        <p>Student of The University of Norhtampton, Northampton, Northamptonshire, United Kingdom.</p>
+        <a id="linkedin" href="https://uk.linkedin.com/in/matthew-norbury-aa9718130">Linkedin</a>
+        <a id="github" href="https://github.com/mattynorb">GitHub</a>
+    </footer>
+
 </body>
 
 </html>
