I've updated the HTML on both the index page and the bio page, I have also updated the CSS for the index page and added and completed 'style-bio.css' for 'bio.html'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <link href="https://fonts.googleapis.com/css?family=Oswald|Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald|Roboto|Ubuntu" rel="stylesheet">
     <link rel="stylesheet" href="css/style-index.css" type="text/css">
     <meta charset="utf-8">
     <title>Home</title>
@@ -31,10 +31,10 @@
     </article>
 
     <footer class="footer">
-        <p>Student of The University of Norhtampton, Northampton, Northamptonshire, United Kingdom.</p>
-        <a id="linkedin" href="https://uk.linkedin.com/in/matthew-norbury-aa9718130">Linkedin</a>
-        <a id="github" href="https://github.com/mattynorb">GitHub</a>
-    </footer>
+    <p>Student of The University of Norhtampton, Northampton, Northamptonshire, United Kingdom.</p>
+    <a id="linkedin" href="https://uk.linkedin.com/in/matthew-norbury-aa9718130">Linkedin</a>
+    <a id="github" href="https://github.com/mattynorb">GitHub</a>
+</footer>
 
 </body>
 
