Updated the HTML and added a CSS file for the contact page. Also have updated the other CSS and HTML files.

--- a/contact.html
+++ b/contact.html
@@ -3,21 +3,38 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="css/style-contact.css">
+    <link href="https://fonts.googleapis.com/css?family=Oswald|Roboto|Ubuntu" rel="stylesheet">
     <meta charset="utf-8">
     <title>Contact Information</title>
 </head>
 
 <body>
+    <div class="header">
+        <h1 id="title">Contact Me</h1>
+    </div>
+
+    <a id="home" href="index.html" role="button">Home</a>
+    <a id="cv" href="cv.html" role="button">My CV</a>
+    <a id="contact" href="bio.html" role="button">About Me</a>
+
     <h1>How To Contact Me</h1>
     <h2>If you need to contact me for any reason don't hesitate to do so</h2>
-    <h3>Email</h3>
-    <a href="matty.norb@hotmail.co.uk">Email me here</a>
-    <h3>My number</h3>
+    <h3>Email:</h3>
+    <a id="email" href="mailto:matty.norb@hotmail.co.uk?Subject=Website">matty.norb@hotmail.co.uk</a>
+    <h3>My number:</h3>
     <p>01234567891</p>
-    <h3>Social media</h3>
-    <a href="https://www.facebook.com/mattynorb"><img src="#" alt=""></a>
-    <a href="https://uk.linkedin.com/in/matthew-norbury-aa9718130"><img src="#" alt=""></a>
-    <a href="https://github.com/mattynorb"><img src="#" alt=""></a>
+    <h3>Social media:</h3>
+    <a id="fbthumb" href="https://www.facebook.com/mattynorb"><img src="#" alt="Facebook"></a>
+    <a id="linkthumb" href="https://uk.linkedin.com/in/matthew-norbury-aa9718130"><img src="#" alt="Linkedin"></a>
+    <a id="gitthumb" href="https://github.com/mattynorb"><img src="#" alt="GitHub"></a>
+    <img id="bowl" src="images/bowling-alley.jpg" alt="">
+
+    <div class="footer">
+        <p id="footdes">Student of The University of Norhtampton, Northampton, Northamptonshire, United Kingdom.</p>
+        <a id="linkedin" href="https://uk.linkedin.com/in/matthew-norbury-aa9718130">Linkedin</a>
+        <a id="github" href="https://github.com/mattynorb">GitHub</a>
+    </div>
 </body>
 
 </html>
