--- a/index.html
+++ b/index.html
@@ -11,27 +11,27 @@
 
 <body>
 
-    <img id="splash" src="images/watchmen-1613267.png" alt="">
+    <img id="splash" src="images/watchmen.png" alt="">
 
     <header class="header">
         <h1>Matthew Norbury</h1>
     </header>
 
-    <article class="left-column">
+    <div class="left-column">
         <p>This is my website! Here you can learn more about me as well as looking at my qualifications and social media links.</p>
         <ul>
             <li><a href="cv.html">My CV</a></li>
             <li><a href="bio.html">About Me</a></li>
             <li><a href="contact.html">Contact Me</a></li>
         </ul>
-    </article>
+    </div>
 
-    <article class="right-column">
+    <div class="right-column">
         <img id="me" src="images/me.jpg" alt="images/me-alt.jpg">
-    </article>
+    </div>
 
     <footer class="footer">
-    <p>Student of The University of Norhtampton, Northampton, Northamptonshire, United Kingdom.</p>
+    <p id="footdes">Student of The University of Norhtampton, Northampton, Northamptonshire, United Kingdom.</p>
     <a id="linkedin" href="https://uk.linkedin.com/in/matthew-norbury-aa9718130">Linkedin</a>
     <a id="github" href="https://github.com/mattynorb">GitHub</a>
 </footer>
