Updated the HTML for the CV page and added the CSS to style it. I have also updated the HTML and CSS for the index page for better functionality.

--- a/contact.html
+++ b/contact.html
@@ -20,18 +20,38 @@
 
     <h1>How To Contact Me</h1>
     <h2>If you need to contact me for any reason don't hesitate to do so</h2>
+
+    <form class="" action="mailto:matty.norb@hotmail.co.uk" method="post">
+      <h3 id="form">Send me a message</h3>
+      <fieldset>
+        <input type="text" name="name" placeholder="Your name">
+      </fieldset>
+      <fieldset>
+        <input type="text" name="email" placeholder="Your email">
+      </fieldset>
+      <fieldset>
+        <textarea name="message" placeholder="Message" rows="8" cols="80"></textarea>
+      </fieldset>
+      <fieldset>
+        <input type="submit" name="submit" value="Send Message">
+      </fieldset>
+    </form>
+
     <h3>Email:</h3>
     <a id="email" href="mailto:matty.norb@hotmail.co.uk?Subject=Website">matty.norb@hotmail.co.uk</a>
     <h3>My number:</h3>
     <p>01234567891</p>
     <h3>Social media:</h3>
-    <a id="fbthumb" href="https://www.facebook.com/mattynorb"><img src="#" alt="Facebook"></a>
-    <a id="linkthumb" href="https://uk.linkedin.com/in/matthew-norbury-aa9718130"><img src="#" alt="Linkedin"></a>
-    <a id="gitthumb" href="https://github.com/mattynorb"><img src="#" alt="GitHub"></a>
-    <img id="bowl" src="images/bowling-alley.jpg" alt="">
+    <div class="thumbnail">
+      <a href="https://www.facebook.com/mattynorb"><img src="#" alt="Facebook"></a>
+      <a href="https://uk.linkedin.com/in/matthew-norbury-aa9718130"><img src="#" alt="Linkedin"></a>
+      <a href="https://github.com/mattynorb"><img src="#" alt="GitHub"></a>
+    </div>
+
+    <img id="bowl" src="images/bowling-alley.png" alt="">
 
     <div class="footer">
-        <p id="footdes">Student of The University of Norhtampton, Northampton, Northamptonshire, United Kingdom.</p>
+        <p id="foot-des">Student of The University of Norhtampton, Northampton, Northamptonshire, United Kingdom.</p>
         <a id="linkedin" href="https://uk.linkedin.com/in/matthew-norbury-aa9718130">Linkedin</a>
         <a id="github" href="https://github.com/mattynorb">GitHub</a>
     </div>
