--- a/cv.html
+++ b/cv.html
@@ -3,41 +3,70 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="css/style-cv.css">
+    <link href="https://fonts.googleapis.com/css?family=Oswald|Roboto|Ubuntu" rel="stylesheet">
     <meta charset="utf-8">
     <title>My CV</title>
 </head>
 
 <body>
+
+  <div class="name">
     <h1>Matthew Norbury</h1>
-    <a href="https://github.com/mattynorb">GitHub</a>
-    <a href="https://uk.linkedin.com/in/matthew-norbury-aa9718130">Linkedin</a>
-    <h2>Education</h2>
-    <p>2011-2014 GCSE:</p>
-    <ul>
-        <li>Mathematics - B</li>
-        <li>English - B</li>
-        <li>Science - B</li>
-    </ul>
-    <p>2014-2016 A-levels:</p>
-    <ul>
-        <li>Media - C</li>
-        <li>Information Technology - Distinction*</li>
-        <li>Physical Education - Distinction*</li>
-    </ul>
-    <h2>Relevant Coursework</h2>
-    <p>In year one of my studies at university I am completing three assignments for the first term: a Software Engineering group assignment, an individual Web Wevelopment assignment and a Problem Solving&Programming assignment</p>
-    <h2>Professional Experiance</h2>
-    <p>In my first year of Sixth Form I did work experience at an IT company that setup networks, supplied hardware and software and maintained the IT infrastructure.</p>
-    <h2>Skills</h2>
-    <ul>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Java</li>
-        <li>Python</li>
-        <li>Microsoft Office</li>
-    </ul>
-    <h2>Related Activities</h2>
-    <p>I am part of The University of Northampton's Computing Society in which we have different computing activities and social events.</p>
+  </div>
+
+    <div class="links">
+        <a href="https://github.com/mattynorb">GitHub</a>
+        <a href="https://uk.linkedin.com/in/matthew-norbury-aa9718130">Linkedin</a>
+    </div>
+
+    <div class="wrapper-edu-course">
+        <div class="edu">
+            <h2>Education</h2>
+            <p>2011-2014 GCSE:</p>
+            <ul>
+                <li>Mathematics - B</li>
+                <li>English - B</li>
+                <li>Science - B</li>
+            </ul>
+            <p>2014-2016 A-levels:</p>
+            <ul>
+                <li>Media - C</li>
+                <li>Information Technology - Distinction*</li>
+                <li>Physical Education - Distinction*</li>
+            </ul>
+        </div>
+
+        <div class="course">
+            <h2>Relevant Coursework</h2>
+            <p>In year one of my studies at university I am completing three assignments for the first term: a Software Engineering group assignment, an individual Web Wevelopment assignment and a Problem Solving&Programming assignment</p>
+        </div>
+    </div>
+    <div class="wrapper-exp-skills">
+        <div class="exp">
+            <h2>Professional Experience</h2>
+            <p>In my first year of Sixth Form I did work experience at an IT company that setup networks, supplied hardware and software and maintained the IT infrastructure.</p>
+        </div>
+
+        <div class="skills">
+            <h2>Skills</h2>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Java</li>
+                <li>Python</li>
+                <li>Microsoft Office</li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="act">
+        <h2>Related Activities</h2>
+        <p>I am part of The University of Northampton's Computing Society in which we have different computing activities and social events.</p>
+    </div>
+
+
+
 </body>
 
 </html>
