--- a/index.html
+++ b/index.html
@@ -17,24 +17,26 @@
         <h1>Matthew Norbury</h1>
     </header>
 
-    <div class="left-column">
-        <p>This is my website! Here you can learn more about me as well as looking at my qualifications and social media links.</p>
-        <ul>
-            <li><a href="cv.html">My CV</a></li>
-            <li><a href="bio.html">About Me</a></li>
-            <li><a href="contact.html">Contact Me</a></li>
-        </ul>
-    </div>
+    <div class="wrapper">
+        <div class="left-column">
+            <p>This is my website! Here you can learn more about me as well as looking at my qualifications and social media links.</p>
+            <ul>
+                <li><a href="cv.html">My CV</a></li>
+                <li><a href="bio.html">About Me</a></li>
+                <li><a href="contact.html">Contact Me</a></li>
+            </ul>
+        </div>
 
-    <div class="right-column">
-        <img id="me" src="images/me.jpg" alt="images/me-alt.jpg">
+        <div class="right-column">
+            <img id="me" src="images/me.png" alt="images/me-alt.png">
+        </div>
     </div>
 
     <footer class="footer">
-    <p id="footdes">Student of The University of Norhtampton, Northampton, Northamptonshire, United Kingdom.</p>
-    <a id="linkedin" href="https://uk.linkedin.com/in/matthew-norbury-aa9718130">Linkedin</a>
-    <a id="github" href="https://github.com/mattynorb">GitHub</a>
-</footer>
+        <p id="foot-des">Student of The University of Norhtampton, Northampton, Northamptonshire, United Kingdom.</p>
+        <a id="linkedin" href="https://uk.linkedin.com/in/matthew-norbury-aa9718130">Linkedin</a>
+        <a id="github" href="https://github.com/mattynorb">GitHub</a>
+    </footer>
 
 </body>
 
