Updated the CV HTML and CSS for a better, more creative look.

--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,7 @@
     </nav>
 
     <br>
+    <br>
     <h1>How To Contact Me</h1>
     <h2>If you need to contact me for any reason don't hesitate to do so</h2>
 
@@ -45,9 +46,9 @@
     <p>01234567891</p>
     <h3>Social media:</h3>
     <div class="thumbnail">
-        <a href="https://www.facebook.com/"><img id="flogo" src="images/facebook-logo.svg" alt=""></a>
-        <a href="https://uk.linkedin.com/in/matthew-norbury-aa9718130"><img id="llogo" src="images/linkedin-logo.svg" alt=""></a>
-        <a href="https://github.com/mattynorb"><img id="glogo" src="images/github-logo.svg" alt=""></a>
+        <a href="https://www.facebook.com/"><img id="flogo" src="images/facebook-logo.svg" alt="images/facebook-logo.png"></a>
+        <a href="https://uk.linkedin.com/in/matthew-norbury-aa9718130"><img id="llogo" src="images/linkedin-logo.svg" alt="images/linkedin-logo.png"></a>
+        <a href="https://github.com/mattynorb"><img id="glogo" src="images/github-logo.svg" alt="images/github-logo.png"></a>
     </div>
 
     <img id="bowl" src="images/bowling-alley.png" alt="">
