--- a/cv.html
+++ b/cv.html
@@ -22,7 +22,7 @@
 
     <div class="wrapper-edu-course">
         <div class="edu">
-            <h2>Education</h2>
+            <img id="tedu" src="images/education.svg" alt="">
             <p>2011-2014 GCSE:</p>
             <ul>
                 <li>Mathematics - B</li>
@@ -38,18 +38,18 @@
         </div>
 
         <div class="course">
-            <h2>Relevant Coursework</h2>
+            <img id="trc" src="images/relevantcoursework.svg" alt="">
             <p>In year one of my studies at university I am completing three assignments for the first term: a Software Engineering group assignment, an individual Web Wevelopment assignment and a Problem Solving&Programming assignment</p>
         </div>
     </div>
     <div class="wrapper-exp-skills">
         <div class="exp">
-            <h2>Professional Experience</h2>
+            <img id="tpe" src="images/professionalexperience.svg" alt="">
             <p>In my first year of Sixth Form I did work experience at an IT company that setup networks, supplied hardware and software and maintained the IT infrastructure.</p>
         </div>
 
         <div class="skills">
-            <h2>Skills</h2>
+            <img id="tskills" src="images/skills.svg" alt="">
             <ul>
                 <li>HTML</li>
                 <li>CSS</li>
@@ -61,7 +61,7 @@
     </div>
 
     <div class="act">
-        <h2>Related Activities</h2>
+        <img id="tra" src="images/relatedactivities.svg" alt="">
         <p>I am part of The University of Northampton's Computing Society in which we have different computing activities and social events.</p>
     </div>
 
